--- a/Films/wwwroot/css/MovieDetail.css
+++ b/Films/wwwroot/css/MovieDetail.css
@@ -216,6 +216,17 @@ p{
         color: gold;
     }
 
+#star-container .star {
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: #ccc;
+    transition: color 0.2s;
+}
+
+    #star-container .star.selected {
+        color: gold;
+    }
+
 .action-btn.active {
     background-color: #ffffff;
     color: #000000;
