si la url de imagen de un actor es nula, no mostrar ese actor

--- a/Films/Views/Movies/Detail.cshtml
+++ b/Films/Views/Movies/Detail.cshtml
@@ -177,10 +177,13 @@
             <div class="actor-pics">
                 @foreach (var actor in actors)
                 {
-                    <div class="actor-item">
-                        <img src="https://image.tmdb.org/t/p/w185/@actor.ProfilePath" alt="@actor.Name" />
-                        <span>@actor.Name</span>
-                    </div>
+                    if (actor.ProfilePath != null)
+                    {
+                        <div class="actor-item">
+                            <img src="https://image.tmdb.org/t/p/w185/@actor.ProfilePath" alt="@actor.Name" />
+                            <span>@actor.Name</span>
+                        </div>
+                    }
                 }
             </div>
 
