--- a/Films/wwwroot/css/login.css
+++ b/Films/wwwroot/css/login.css
@@ -17,6 +17,10 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url("../images/DesignScreen.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .auth-left img {
