--- a/Films/Views/Home/Index.cshtml
+++ b/Films/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
     <img id="logo-home" src="images/logo_pelist_footer.png"/>
     @*<p id="pelist-slogan-text">Ver pelis es un arte, <span class="golden-text">criticarlas también</span>.</p>*@
     <form method="post" id="search-form-home" asp-action="SetSearchMovies" class="d-flex">
-        <input id="search" class="form-control me-2 bg-dark text-white border-custom" name="txtSearch" type="text" placeholder="Busqueda..." value="@(ViewBag.Search != null ? ViewBag.Search : "")" />
+        <input id="search" class="form-control me-2 bg-dark text-white border-custom" name="txtSearch" type="text" placeholder="Busca una película..." value="@(ViewBag.Search != null ? ViewBag.Search : "")" />
         <button type="submit" id="search-button-home" class="btn bg-custom-button d-flex justify-content-center align-items-center gap-2">Buscar <i class="fa-solid fa-search"></i></button>
     </form>
 </div>
