Mejorar estilos mi perfil

--- a/Films/Views/Authentication/SignUP.cshtml
+++ b/Films/Views/Authentication/SignUP.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Films.Models.ViewModels.SignUpViewModel
 @{
     Layout = null;
-    <link rel="stylesheet" href="~/css/login.css" />
+    <link rel="stylesheet" href="~/css/login.css?v=@DateTime.Now.Ticks" />
 }
 
 <div class="auth-container">
