--- a/Films/Views/Authentication/Login.cshtml
+++ b/Films/Views/Authentication/Login.cshtml
@@ -2,7 +2,7 @@
 @model Films.Models.ViewModels.LoginViewModel
 @{
     Layout = null;
-    <link rel="stylesheet" href="~/css/login.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/login.css?v=@DateTime.Now.Ticks" asp-append-version="true" />
 }
 
 <div class="auth-container">
